# uromed-ai

./: .gitignore  README.md  client_js.html  db.py  first.py  index.html  main.py  mqtt_client.py  pyproject.toml  requirements.txt  test_ws.py  vercel.json
