[project]
name = "pyphp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.117.1",
    "google-generativeai>=0.8.5",
    "instructor[google-genai]>=1.11.3",
    "paho-mqtt>=2.1.0",
    "uvicorn>=0.37.0",
]
